On tpl_simple, added to style.css a fix to eliminate the dropdown submenu gaps.

--- a/tpl_simple/css/style.css
+++ b/tpl_simple/css/style.css
@@ -101,6 +101,11 @@ display: inline-block;
 .row-fluid [class*="span"] {
 	min-height: 0;
 }
+
+.dropdown-submenu > .dropdown-menu {
+	left: 99.5%;
+}
+
 #nav-configure {
 	margin-bottom: 50px;
 }
